--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="static/css/app.css">
+  <link rel="stylesheet" type="text/css" href="static/css/absolute.css">
+  <link rel="stylesheet" type="text/css" href="static/css/normalize.css">
   <title>JiraTool</title>
 </head>
 <body>
